--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 altgraph==0.16.1
+atomicwrites==1.3.0
+attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
+colorama==0.4.3
 fbs==0.8.4
 future==0.18.2
 helpdev==0.6.10
@@ -9,18 +12,26 @@ importlib-metadata==1.3.0
 more-itertools==8.0.2
 numpy==1.18.0
 opencv-python==4.1.2.30
+packaging==20.0
 pefile==2019.4.18
 Pillow==7.0.0
+pluggy==0.13.1
 prettytable==0.7.2
 psutil==5.6.7
+py==1.8.1
 PyInstaller==3.5
+pyparsing==2.4.6
 PyQt5==5.13.1
 PyQt5-sip==12.7.0
 PyQt5-stubs==5.13.1.3
+pytest==5.3.2
+pytest-qt==3.3.0
 pywin32==227
 pywin32-ctypes==0.2.0
 QDarkStyle==2.7
 requests==2.22.0
+six==1.13.0
 tesserocr==2.4.0
 urllib3==1.25.7
+wcwidth==0.1.8
 zipp==0.6.0
