--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+os: windows
 language: python
 python:
   - "3.6"
@@ -6,3 +7,5 @@ install:
   - pip install -r requirements.txt
 script:
   - pytest
+notifications:
+  email: false
