--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 os: windows
 language: python
-python:
-  - "3.6"
-  - "3.7"
+python: "3.7"
+before_install:
+- choco install python3
+- export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+- python -m pip install --upgrade pip wheel
 install:
   - pip install -r requirements.txt
 script:
