--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 os: windows
 language: sh
 before_install:
-- choco install python3
+- choco install python --version=3.7.2
 - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
 - python -m pip install --upgrade pip wheel
 install:
