--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 os: windows
 language: sh
 before_install:
-- choco install python3 --version=3.7.6
-- export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+- choco install python3 --params "/InstallDir:C:\\Python"
+- export PATH="/c/Python:/c/Python/Scripts:$PATH"
 - python -m pip install --upgrade pip wheel
 install:
   - pip install -r requirements.txt
