--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-os: windows
-language: sh
+
+language: python
+python:
+  - "3.6"
+  - "3.7"
 before_install:
-- choco install python3 --params "/InstallDir:C:\\Python"
-- export PATH="/c/Python:/c/Python/Scripts:$PATH"
-- python -m pip install --upgrade pip wheel
+  - apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config
 install:
   - pip install -r requirements.txt
 script:
