--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
 colorama==0.4.3
+fbs==0.8.4
 future==0.18.2
 helpdev==0.6.10
 idna==2.8
@@ -25,8 +26,6 @@ PyQt5-sip==12.7.0
 PyQt5-stubs==5.13.1.3
 pytest==5.3.2
 pytest-qt==3.3.0
-pywin32==227
-pywin32-ctypes==0.2.0
 QDarkStyle==2.7
 requests==2.22.0
 six==1.13.0
@@ -34,3 +33,8 @@ tesserocr==2.4.0
 urllib3==1.25.7
 wcwidth==0.1.8
 zipp==0.6.0
+tesserocr=2.4.0 ; sys_platform != 'win32'
+https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.4.0-tesseract-4.0.0/tesserocr-2.4.0-cp37-cp37m-win32.whl ; sys_platform == 'win32' and python_version == '3.7'
+https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.4.0-tesseract-4.0.0/tesserocr-2.4.0-cp36-cp36m-win32.whl ; sys_platform == 'win32' and python_version == '3.6'
+pywin32==227 ; sys_platform == 'win32'
+pywin32-ctypes==0.2.0 ; sys_platform == 'win32'
