--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
   - "3.6"
   - "3.7"
 before_install:
-  - apt-get update
-  - apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config
+  - sudo apt-get update
+  - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config
 install:
   - pip install -r requirements.txt
 script:
