--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ python:
   - "3.7"
 before_install:
   - sudo apt-get update
-  - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config
+  - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config xvfb
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
+  - xvfb-run pytest
 notifications:
   email: false
