Added another test for debugging purposes

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 install:
   - pip install -r requirements.txt
 script:
+  - xvfb-run python test_gui.py
   - xvfb-run pytest
 notifications:
   email: false
