--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 
 language: python
 python:
+  - "3.4"
+  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.8-dev"
+  - "nightly"
 variables:
     QT_QPA_PLATFORM: "offscreen"
 before_install:
