--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ atomicwrites==1.3.0
 attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
-colorama==0.4.3
+colorama==0.4.3 ; python_version > '3.4'
+colorama ; python_version <= '3.4'
 fbs==0.8.4
 future==0.18.2
 helpdev==0.6.10
