--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,55 @@
 
 language: python
-python:
-  - "3.5"
-  - "3.6"
-  - "3.7"
-  - "3.8"
-  - "3.8-dev"
+jobs:
+  include:
+      - name: "Python 3.8-dev on Linux"
+        python: "3.8-dev"
+        before_install:
+          - sudo apt-get update
+          - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+        services:
+          - xvfb
+      - name: "Python 3.8 on Linux"
+        python: "3.8"
+        before_install:
+          - sudo apt-get update
+          - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+        services:
+          - xvfb
+      - name: "Python 3.7 on Linux"
+        python: "3.7"
+        before_install:
+          - sudo apt-get update
+          - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+        services:
+          - xvfb
+      - name: "Python 3.6 on Linux"
+        python: "3.6"
+        before_install:
+          - sudo apt-get update
+          - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+        services:
+          - xvfb
+      - name: "Python 3.5 on Linux"
+        python: "3.5"
+        before_install:
+          - sudo apt-get update
+          - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+        services:
+          - xvfb
+      - name: "Python 3.7.4 on macOS"
+        os: osx
+        osx_image: xcode11.2
+        language: shell
+      - name: "Python 3.8.0 on Windows"
+        os: windows
+        language: shell
+        before_install:
+          - choco install python --version 3.8.0
+          - python -m pip install --upgrade pip
+        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 variables:
     QT_QPA_PLATFORM: "offscreen"
-before_install:
-  - sudo apt-get update
-  - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
-services:
-  - xvfb
 install:
   - pip install -r requirements.txt
 script:
