--- a/.travis.yml
+++ b/.travis.yml
@@ -39,19 +39,20 @@ jobs:
           - xvfb
       - name: "Python 3.7.4 on macOS"
         os: osx
-        osx_image: xcode11.2
+        osx_image: xcode11.3
         language: shell
+        env: PYTHON=3.7.4
       - name: "Python 3.8.0 on Windows"
         os: windows
         language: shell
         before_install:
           - choco install python --version 3.8.0
           - python -m pip install --upgrade pip
-        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 variables:
     QT_QPA_PLATFORM: "offscreen"
 install:
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
 script:
   - pytest -s
 notifications:
