--- a/.travis.yml
+++ b/.travis.yml
@@ -41,12 +41,15 @@ jobs:
         os: osx
         osx_image: xcode11.3
         language: shell
+        before_install:
+          - sudo port install leptonica
+          - sudo brew install tesseract
         env: PYTHON=3.7.4
-      - name: "Python 3.8.0 on Windows"
+      - name: "Python 3.7.0 on Windows"
         os: windows
         language: shell
         before_install:
-          - choco install python --version 3.8.0
+          - choco install python --version 3.7.0
           - python -m pip install --upgrade pip
         env: PATH=/c/Python38:/c/Python38/Scripts:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 variables:
