--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ jobs:
         osx_image: xcode11.3
         language: shell
         before_install:
-          - sudo port install leptonica
+          - sudo brew install leptonica
           - sudo brew install tesseract
         env: PYTHON=3.7.4
       - name: "Python 3.7.0 on Windows"
@@ -51,7 +51,7 @@ jobs:
         before_install:
           - choco install python --version 3.7.0
           - python -m pip install --upgrade pip
-        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
+        env: PATH=/c/Python37:/c/Python37/Scripts:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 variables:
     QT_QPA_PLATFORM: "offscreen"
 install:
