--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,9 @@ jobs:
         os: windows
         language: shell
         before_install:
-          - choco install python3 --version 3.7.4
-          - python -m pip install --upgrade pip
-        env: PATH=/c/Python37:/c/Python37/Scripts:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
+          - choco install python3 --version 3.6.8
+          - refreshenv
+        env: TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 variables:
     QT_QPA_PLATFORM: "offscreen"
 install:
