--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ jobs:
           - choco install miniconda3 -y
           - /c/tools/miniconda3/Scripts/activate.bat
           - conda install -c conda-forge tesserocr -y
-        env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
+        env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 env:
   - QT_QPA_PLATFORM="offscreen"
 install:
