--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,8 @@ jobs:
         language: shell
         before_install:
           - choco install miniconda3 -y
-          - /c/tools/miniconda3/Scripts/activate.bat
+          - conda create --name env python=3 -y
+          - conda activate env
           - conda install -c conda-forge tesserocr -y
         env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 env:
