--- a/.travis.yml
+++ b/.travis.yml
@@ -4,60 +4,63 @@ jobs:
   include:
       - name: "Python 3.8-dev on Linux"
         python: "3.8-dev"
-        before_install:
+        install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.8 on Linux"
         python: "3.8"
-        before_install:
+        install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.7 on Linux"
         python: "3.7"
-        before_install:
+        install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.6 on Linux"
         python: "3.6"
-        before_install:
+        install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.5 on Linux"
         python: "3.5"
-        before_install:
+        install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
+          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.7.4 on macOS"
         os: osx
         osx_image: xcode11.3
         language: shell
-        before_install:
+        install:
           - brew install leptonica
           - brew install tesseract
+          - pip3 install -r requirements.txt
         env: PYTHON=3.7.4
       - name: "Python 3.7 on Windows"
         os: windows
         language: shell
-        before_install:
+        install:
           - choco install miniconda3 -y
-          - conda create --name env python=3 -y
-          - conda activate env
           - conda install -c conda-forge tesserocr -y
+          - pip install -r requirements.txt
         env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 env:
   - QT_QPA_PLATFORM="offscreen"
-install:
-  - pip3 install -r requirements.txt
 script:
   - pytest -s
 notifications:
