--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ importlib-metadata==1.3.0
 more-itertools==8.0.2
 numpy==1.18.0
 opencv-python==4.1.2.30
+opencv-contrib-python==4.1.2.30
 packaging==20.0
 pefile==2019.4.18
 Pillow==7.0.0
