--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,8 @@ jobs:
           - choco install miniconda3 -y
           - conda install -c conda-forge tesserocr -y
           - pip install -r requirements.txt
+          - powershell -command "Invoke-WebRequest https://github.com/donaldsa18/WarframePrimeHelper/releases/download/1.2/Windows_MediaFeaturePack_x64_1803.msu -O Windows_MediaFeaturePack_x64_1803.msu"
+          - wusa Windows_MediaFeaturePack_x64_1803.msu /quiet /norestart
         env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 env:
   - QT_QPA_PLATFORM="offscreen"
