--- a/.travis.yml
+++ b/.travis.yml
@@ -58,9 +58,7 @@ jobs:
           - choco install miniconda3 -y
           - conda install -c conda-forge tesserocr -y
           - pip install -r requirements.txt
-          - reg add HKLM\SOFTWARE\Microsoft\.NETFramework\v4.0.30319 /v SchUseStrongCrypto /t REG_DWORD /d 1 /reg:64
-          - reg add HKLM\SOFTWARE\Microsoft\.NETFramework\v4.0.30319 /v SchUseStrongCrypto /t REG_DWORD /d 1 /reg:32
-          - powershell -command "Invoke-WebRequest https://github.com/donaldsa18/WarframePrimeHelper/releases/download/1.2/Windows_MediaFeaturePack_x64_1803.msu -O Windows_MediaFeaturePack_x64_1803.msu"
+          - powershell -command "[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12 ; Invoke-WebRequest https://github.com/donaldsa18/WarframePrimeHelper/releases/download/1.2/Windows_MediaFeaturePack_x64_1803.msu"
           - wusa Windows_MediaFeaturePack_x64_1803.msu /quiet /norestart
         env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/
 env:
