--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ jobs:
           - pip install -r requirements.txt
           - curl -LJO https://github.com/lucasg/Dependencies/releases/download/v1.10/Dependencies_x64_Release.zip
           - 7za e Dependencies_x64_Release.zip
-          - Dependencies.exe -modules /c/tools/miniconda3/Lib/site-packages/cv2/cv2.cp37-win_amd64.pyd
+          - ./Dependencies.exe -modules /c/tools/miniconda3/Lib/site-packages/cv2/cv2.cp37-win_amd64.pyd
         env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/ OPENCV_VIDEOIO_PRIORITY_LIST=DSHOW
 env:
   - QT_QPA_PLATFORM="offscreen"
