--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,8 @@ jobs:
           - choco install miniconda3 curl 7zip.portable -y
           - conda install -c conda-forge tesserocr -y
           - pip install -r requirements.txt
-        env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$TRAVIS_BUILD_DIR/deps:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/ OPENCV_VIDEOIO_PRIORITY_LIST=DSHOW
+          - copy deps\ .
+        env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/ OPENCV_VIDEOIO_PRIORITY_LIST=DSHOW
 env:
   - QT_QPA_PLATFORM="offscreen"
 script:
