--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 
 language: python
+cache: pip
 jobs:
   include:
       - name: "Python 3.7 on Windows"
@@ -9,7 +10,9 @@ jobs:
           - choco install miniconda3 curl 7zip.portable -y
           - conda install -c conda-forge tesserocr -y
           - pip install -r requirements.txt
-          - copy deps\ .
+          - xcopy deps/mf.dll mf.dll
+          - xcopy deps/mfplat.dll mfplat.dll
+          - xcopy deps/mfreadwrite.dll mfreadwrite.dll
         env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/ OPENCV_VIDEOIO_PRIORITY_LIST=DSHOW
       - name: "Python 3.8-dev on Linux"
         python: "3.8-dev"
