--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ jobs:
           - choco install miniconda3 curl 7zip.portable -y
           - conda install -c conda-forge tesserocr -y
           - pip install -r requirements.txt
-          - xcopy deps/mf.dll mf.dll
-          - xcopy deps/mfplat.dll mfplat.dll
-          - xcopy deps/mfreadwrite.dll mfreadwrite.dll
+          - xcopy deps .
         env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/ OPENCV_VIDEOIO_PRIORITY_LIST=DSHOW
       - name: "Python 3.8-dev on Linux"
         python: "3.8-dev"
