--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
         install:
           - echo $PATH
           - choco install miniconda3 curl 7zip.portable -y
-          - conda install -c conda-forge tesserocr -y
+          - conda install -c conda-forge tesserocr py-OpenCV -y
           - pip install -r requirements.txt
           - xcopy deps "C:\Windows\System32" /y
           - curl -LJO https://github.com/lucasg/Dependencies/releases/download/v1.10/Dependencies_x64_Release.zip
