--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,16 @@ jobs:
         install:
           - echo $PATH
           - choco install miniconda3 curl 7zip.portable -y
-          - conda install -c conda-forge tesserocr py-OpenCV -y
           - pip install -r requirements.txt
+          - conda install -c conda-forge tesserocr opencv -y
           - xcopy deps "C:\Windows\System32"
           - curl -LJO https://github.com/lucasg/Dependencies/releases/download/v1.10/Dependencies_x64_Release.zip
           - 7za e Dependencies_x64_Release.zip
-          - ./Dependencies.exe -modules /c/tools/miniconda3/Lib/site-packages/cv2/cv2.cp37-win_amd64.pyd
+          - ls /c/tools/miniconda3/pkgs/
+          - ./Dependencies.exe -modules "C:\tools\miniconda3\Lib\site-packages\cv2\cv2.cp37-win_amd64.pyd"
+          - ./Dependencies.exe -imports "C:\tools\miniconda3\Lib\site-packages\cv2\cv2.cp37-win_amd64.pyd"
+          - ./Dependencies.exe -modules "C:\tools\miniconda3\pkgs\libopencv-4.2.0-py38_0\Lib\site-packages\cv2.cp38-win_amd64.pyd"
+          - ./Dependencies.exe -imports "C:\tools\miniconda3\pkgs\libopencv-4.2.0-py38_0\Lib\site-packages\cv2.cp38-win_amd64.pyd"
         env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/ OPENCV_VIDEOIO_PRIORITY_LIST=DSHOW
       - name: "Python 3.8-dev on Linux"
         python: "3.8-dev"
