--- a/.travis.yml
+++ b/.travis.yml
@@ -3,30 +3,11 @@ language: python
 cache: pip
 jobs:
   include:
-      - name: "Python 3.7 on Windows"
-        os: windows
-        language: shell
-        install:
-          - echo $PATH
-          - choco install miniconda3 curl 7zip.portable -y
-          - pip install -r requirements.txt
-          - conda install -c conda-forge tesserocr opencv -y
-          - xcopy deps "C:\Windows\System32"
-          - curl -LJO https://github.com/lucasg/Dependencies/releases/download/v1.10/Dependencies_x64_Release.zip
-          - 7za e Dependencies_x64_Release.zip
-          - ls /c/tools/miniconda3/pkgs/
-          - find /c/tools/miniconda3/ -name "cv2.cp3*-win_amd64.pyd"
-          - ./Dependencies.exe -modules /c/tools/miniconda3/Lib/site-packages/cv2.cp37-win_amd64.pyd
-          - ./Dependencies.exe -imports /c/tools/miniconda3/Lib/site-packages/cv2.cp37-win_amd64.pyd
-          - ./Dependencies.exe -modules /c/tools/miniconda3/pkgs/libopencv-4.2.0-py37_0/Lib/site-packages/cv2.cp37-win_amd64.pyd
-          - ./Dependencies.exe -imports /c/tools/miniconda3/pkgs/libopencv-4.2.0-py37_0/Lib/site-packages/cv2.cp37-win_amd64.pyd
-        env: PATH=/c/tools/miniconda3:/c/tools/miniconda3/Scripts:/c/tools/miniconda3/Library/bin:$PATH TESSDATA_PREFIX=$TRAVIS_BUILD_DIR/tesseract4win64-4.0-beta/ OPENCV_VIDEOIO_PRIORITY_LIST=DSHOW
       - name: "Python 3.8-dev on Linux"
         python: "3.8-dev"
         install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
-          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.8 on Linux"
@@ -34,7 +15,6 @@ jobs:
         install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
-          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.7 on Linux"
@@ -42,7 +22,6 @@ jobs:
         install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
-          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.6 on Linux"
@@ -50,7 +29,6 @@ jobs:
         install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
-          - pip3 install -r requirements.txt
         services:
           - xvfb
       - name: "Python 3.5 on Linux"
@@ -58,18 +36,21 @@ jobs:
         install:
           - sudo apt-get update
           - sudo apt-get install tesseract-ocr libtesseract-dev libleptonica-dev pkg-config libdbus-1-3 libxkbcommon-x11-0
-          - pip3 install -r requirements.txt
         services:
           - xvfb
-      - name: "Python 3.7.4 on macOS"
-        os: osx
+      - os: osx
         osx_image: xcode11.3
         language: shell
         install:
           - brew install leptonica
           - brew install tesseract
-          - pip3 install -r requirements.txt
-        env: PYTHON=3.7.4
+        env:
+          - PYTHON=3.8.1
+          - PYTHON=3.7.6
+          - PYTHON=3.6.10
+          - PYTHON=3.5.9
+before_install:
+  - pip3 install -r requirements.txt
 env:
   - QT_QPA_PLATFORM="offscreen"
 script:
