--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 altgraph==0.16.1
 atomicwrites==1.3.0
 attrs==19.3.0
-certifi==2019.11.28
+certifi==2019.11.28  ; sys_platform != 'win32'
 chardet==3.0.4
 colorama==0.4.3
 fbs==0.8.4
